--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@ $(function() {
 			{ name: 'radio' }
 		],
 		select: [
-			{ name: 'select' }
+			{ name: 'select' },
+			{ name: 'select2' }
 		]
 	});
 });
@@ -38,7 +39,7 @@ $(function() {
 		<select id="select" name="select">
 			<option value="">Select</option>
 			<option value="1">Option 1</option>
-			<option value="2">Option 1</option>
+			<option value="2">Option 2</option>
 			<option value="3">Option 3</option>
 			<option value="4">Option 4</option>
 		</select>
