make confs enabled

--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@ $(function() {
 			{ name: 'radio' }
 		],
 		select: [
-			{ name: 'select' },
-			{ name: 'select2' }
+			{ name: 'select' }
 		]
 	});
 });
